fix profile dropdown bug
Previously profile dropdown had 'opacity: 0' on default, so even if he
wasn't visible, he still was clickable, and sometimes this lead to accidental
exit etc.
Remove transition from profile dropdown and fix clickability on invisible
dropdown.

--- a/website/styles/general.css
+++ b/website/styles/general.css
@@ -12,10 +12,6 @@
     display: none;
 }
 
-.vanished {
-    opacity: 0;
-}
-
 .undecorated-list {
     list-style-type: none;
     padding: 1rem;
